test/function/error/function_redeclaration.c
void f(){
    printf("void");
}

void f(int a){
    printf("%d", a);
}

